--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "vite"
+    
+    
   },
   "keywords": [],
   "author": "",
@@ -16,4 +20,5 @@
     "express": "^4.21.2",
     "mongoose": "^8.11.0"
   }
+  
 }
